--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    max-width: 100vw;
+    /* Set the maximum width to 100% of the viewport width */
+    overflow-x: hidden;
+    /* Hide any horizontal overflow */
+}
+
 hr {
     border: none;
     width: 80%;
@@ -11,4 +18,45 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.line {
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.trans {
+    transition: all 0.7s ease-in-out;
+    /* Adjust the duration and timing function as needed */
+}
+
+.waving-hand {
+    animation: wave 2s infinite;
+}
+
+@keyframes wave {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    20% {
+        transform: rotate(-20deg);
+    }
+
+    40% {
+        transform: rotate(12deg);
+    }
+
+    60% {
+        transform: rotate(-8deg);
+    }
+
+    80% {
+        transform: rotate(4deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
